--- a/docs/1.guide/10.tasks.md
+++ b/docs/1.guide/10.tasks.md
@@ -148,6 +148,7 @@ This endpoint returns a list of available task names and their meta.
 
 This endpoint executes a task. You can provide a payload using both query parameters and body JSON payload. The payload sent in the JSON body payload must be under the `"payload"` property.
 
+::code-group
 ```ts [tasks/echo/payload.ts]
 export default defineTask({
   meta: {
@@ -160,15 +161,14 @@ export default defineTask({
   },
 });
 ```
-
-```json
+```json [GET]
 // [GET] /_nitro/tasks/echo:payload?field=value&array=1&array=2
 {
   "field": "value",
   "array": ["1", "2"]
 }
-
-```json
+```
+```json [POST]
 /**
  * [POST] /_nitro/tasks/echo:payload?field=value
  * body: {
@@ -188,6 +188,7 @@ export default defineTask({
   }
 }
 ```
+::
 
 > [!NOTE]
 > The JSON payload included in the body will overwrite the keys present in the query params.
