docs(cache): add example usage for `cache.varies` (#2241)

--- a/docs/1.guide/6.cache.md
+++ b/docs/1.guide/6.cache.md
@@ -233,7 +233,7 @@ The `cachedEventHandler` and `cachedFunction` functions accept the following opt
     A function that returns a `boolean` to bypass the current cache without invalidating the existing entry.
   ::
   ::field{name="varies" type="string[]"}
-    An array of request headers to be considered for the cache, [learn more](https://github.com/unjs/nitro/issues/1031).
+    An array of request headers to be considered for the cache, [learn more](https://github.com/unjs/nitro/issues/1031). If utilizing in a multi-tenant environment, you may want to pass `['host', 'x-forwarded-host']` to ensure these headers are not discarded and that the cache is unique per tenant.
   ::
 ::
 
