--- a/docs/1.guide/5.database.md
+++ b/docs/1.guide/5.database.md
@@ -91,7 +91,13 @@ export default defineNitroConfig({
     users: {
       connector: 'postgresql',
       url: 'postgresql://username:password@hostname:port/database_name'
-    }
+    },
+    turso: {
+      connector: 'libsql',
+      options: {
+          url: 'libsql:url',
+          authToken: 'auth-token'
+      }
   }
 })
 ```
@@ -106,6 +112,12 @@ export default defineNuxtConfig({
       users: {
         connector: 'postgresql',
         url: 'postgresql://username:password@hostname:port/database_name'
+      },
+      turso: {
+        connector: 'libsql',
+        options: {
+          url: 'libsql:url',
+          authToken: 'auth-token'
       }
     }
   }
