--- a/docs/3.config/0.index.md
+++ b/docs/3.config/0.index.md
@@ -42,6 +42,9 @@ Enable experimental features.
 
 Enable `/_nitro/scalar` and `/_nitro/swagger` and `/_nitro/openapi.json` endpoints.
 
+> [!IMPORTANT]
+> [Scalar](https://scalar.com/) support is currently available in [nightly channel](/guide/nightly).
+
 #### `wasm`
 
 Enable WASM support
