docs: dev-only route

--- a/docs/1.guide/2.routing.md
+++ b/docs/1.guide/2.routing.md
@@ -141,6 +141,10 @@ export default defineEventHandler(event => {
 })
 ```
 
+### Dev-only route
+
+You can specify for a route that will only be included in production build by adding the `.dev` suffix to the file name, for example: `routes/index.dev.ts`.
+
 ## Middleware
 
 Nitro route middleware can hook into the request lifecycle.
