--- a/docs/1.guide/2.routing.md
+++ b/docs/1.guide/2.routing.md
@@ -175,7 +175,7 @@ export default defineEventHandler((event) => {
 })
 ```
 
-Middleware in `middleware/` directory are automatically registered for all routes. If you want to register a middleware for a specific route, see [Object Syntax Event Handler](#object-syntax-event-handler).
+Middleware in `middleware/` directory are automatically registered for all routes. If you want to register a middleware for a specific route, see [Object Syntax Event Handler](https://h3.unjs.io/guide/event-handler#object-syntax).
 
 ::note
 Returning anything from a middleware will close the request and should be avoided! Any returned value from middleware will be the response and further code will not be executed however **this is not recommended to do!**
