--- a/docs/1.guide/2.routing.md
+++ b/docs/1.guide/2.routing.md
@@ -200,6 +200,9 @@ middleware/
   2.auth.ts <-- Second
   3.... <-- Third
 ```
+::note
+Remember that file names are sorted as strings, thus for example if you have 3 files `1.filename.ts`, `2.filename.ts` and `10.filename.ts`, the `10.filename.ts` will come after the `1.filename.ts`. To avoid this, prefix `1-9` with a `0` like `01`, if you have more than 10 middleware in the same directory.
+::
 
 ### Request filtering
 
