docs: update tasks return value

--- a/docs/1.guide/10.tasks.md
+++ b/docs/1.guide/10.tasks.md
@@ -51,7 +51,7 @@ export default defineTask({
   },
   run({ payload, context }) {
     console.log("Running DB migration task...");
-    return "Success";
+    return { result: "Success" };
   },
 });
 ```
@@ -108,6 +108,7 @@ export default eventHandler(async (event) => {
   // IMPORTANT: Authenticate user and validate payload!
   const payload = { ...getQuery(event) };
   const { result } = await runTask("db:migrate", { payload });
+
   return { result };
 });
 ```
@@ -157,7 +158,7 @@ export default defineTask({
   },
   run({ payload, context }) {
     console.log("Running echo task...");
-    return payload;
+    return { result: payload };
   },
 });
 ```
