chore: update docs

--- a/docs/1.guide/6.cache.md
+++ b/docs/1.guide/6.cache.md
@@ -69,11 +69,11 @@ The stars will be cached in development inside **.nitro/cache/functions/ghStars/
 You can also use the `cachedFunction` method as alias of `defineCachedFunction`.
 ::
 
-### Serverless environment
+### Edge workers
 
-In a serverless environment, the instance is destroyed after each request. Nitro uses `event.waitUntil` to keep the instance alive while the cache is being updated while the response is sent to the client.
+In a edge workers, the instance is destroyed after each request. Nitro automatically uses `event.waitUntil` to keep the instance alive while the cache is being updated while the response is sent to the client.
 
-To make sure your cached functions are working as expected in a serverless environment, you should always give the `event` as first argument to the function.
+To make sure your cached functions are working as expected in a edge workers, you should always give the `event` as first argument to the function with `defineCachedFunction`.
 
 ::code-group
 ```ts [utils/github.ts]
