--- a/docs/1.guide/98.typescript.md
+++ b/docs/1.guide/98.typescript.md
@@ -25,7 +25,7 @@ To leverage type hints within your project, create a `tsconfig.json` file that e
 ::
 
 ::tip
-Starter templates have this file by defualt and usually you don't need to do anything. If this file does not exists, you can manually create it.
+Starter templates have this file by default and usually you don't need to do anything. If this file does not exists, you can manually create it.
 ::
 
 ## Prepare types
