docs: configure openAPI

--- a/docs/3.config/0.index.md
+++ b/docs/3.config/0.index.md
@@ -42,8 +42,30 @@ Enable experimental features.
 
 Enable `/_nitro/scalar` and `/_nitro/swagger` and `/_nitro/openapi.json` endpoints.
 
+- Default: `false`
+
 > [!IMPORTANT]
 > [Scalar](https://scalar.com/) support is currently available in [nightly channel](/guide/nightly).
+
+You can also pass an object to modify your OpenAPI specification:
+
+```js
+openAPI: {
+  title: 'My Awesome Project',
+  description: 'This might become the next big thing.',
+  version: '1.0'
+}
+```
+
+If you like to customize the Scalar integration, you can [pass a configuration object](https://github.com/scalar/scalar) like this:
+
+```js
+openAPI: {
+  scalar: {
+    theme: 'purple'
+  }
+}
+```
 
 #### `wasm`
 
