refactor: openAPI configuration structure

--- a/docs/3.config/0.index.md
+++ b/docs/3.config/0.index.md
@@ -47,13 +47,15 @@ Enable `/_nitro/scalar` and `/_nitro/swagger` and `/_nitro/openapi.json` endpoin
 > [!IMPORTANT]
 > [Scalar](https://scalar.com/) support is currently available in [nightly channel](/guide/nightly).
 
-You can also pass an object to modify your OpenAPI specification:
+You can pass an object on the root level to modify your OpenAPI specification:
 
 ```js
 openAPI: {
-  title: 'My Awesome Project',
-  description: 'This might become the next big thing.',
-  version: '1.0'
+  meta: {
+    title: 'My Awesome Project',
+    description: 'This might become the next big thing.',
+    version: '1.0'
+  }
 }
 ```
 
@@ -61,8 +63,10 @@ If you like to customize the Scalar integration, you can [pass a configuration o
 
 ```js
 openAPI: {
-  scalar: {
-    theme: 'purple'
+  ui: {
+    scalar: {
+      theme: 'purple'
+    }
   }
 }
 ```
