feat(openapi): support configuration via `openapi`  (#2299)
Co-authored-by: Pooya Parsa <pooya@pi0.io>

--- a/docs/3.config/0.index.md
+++ b/docs/3.config/0.index.md
@@ -42,6 +42,35 @@ Enable experimental features.
 
 Enable `/_nitro/scalar` and `/_nitro/swagger` and `/_nitro/openapi.json` endpoints.
 
+- Default: `false`
+
+> [!IMPORTANT]
+> [Scalar](https://scalar.com/) support is currently available in [nightly channel](/guide/nightly).
+
+You can pass an object on the root level to modify your OpenAPI specification:
+
+```js
+openAPI: {
+  meta: {
+    title: 'My Awesome Project',
+    description: 'This might become the next big thing.',
+    version: '1.0'
+  }
+}
+```
+
+If you like to customize the Scalar integration, you can [pass a configuration object](https://github.com/scalar/scalar) like this:
+
+```js
+openAPI: {
+  ui: {
+    scalar: {
+      theme: 'purple'
+    }
+  }
+}
+```
+
 #### `wasm`
 
 Enable WASM support
