--- a/docs/1.guide/2.routing.md
+++ b/docs/1.guide/2.routing.md
@@ -141,9 +141,9 @@ export default defineEventHandler(event => {
 })
 ```
 
-### Dev-only route
+### Environment specific handlers
 
-You can specify for a route that will only be included in production build by adding the `.dev` suffix to the file name, for example: `routes/index.dev.ts`.
+You can specify for a route that will only be included in development or production builds by adding a `.dev` or `.prod` suffix to the file name, for example: `routes/test.get.dev.ts` or `routes/test.get.prod.ts`.
 
 ## Middleware
 
