--- a/docs/1.guide/2.routing.md
+++ b/docs/1.guide/2.routing.md
@@ -143,7 +143,10 @@ export default defineEventHandler(event => {
 
 ### Environment specific handlers
 
-You can specify for a route that will only be included in development or production builds by adding a `.dev` or `.prod` suffix to the file name, for example: `routes/test.get.dev.ts` or `routes/test.get.prod.ts`.
+You can specify for a route that will only be included in specific builds by adding a `.dev`, `.prod` or `.prerender` suffix to the file name, for example: `routes/test.get.dev.ts` or `routes/test.get.prod.ts`.
+
+> [!TIP]
+> You can specify multiple environments or specify a preset name as environment using programmatic registration of routes via `handlers[]` config.
 
 ## Middleware
 
