feat: environment specific event handlers (#2272)
Co-authored-by: Pooya Parsa <pooya@pi0.io>

--- a/docs/1.guide/2.routing.md
+++ b/docs/1.guide/2.routing.md
@@ -141,6 +141,17 @@ export default defineEventHandler(event => {
 })
 ```
 
+### Environment specific handlers
+
+> [!NOTE]
+> This feature is currently available in [nightly channel](https://nitro.unjs.io/guide/nightly) only.
+
+You can specify for a route that will only be included in specific builds by adding a `.dev`, `.prod` or `.prerender` suffix to the file name, for example: `routes/test.get.dev.ts` or `routes/test.get.prod.ts`.
+
+> [!TIP]
+> You can specify multiple environments or specify a preset name as environment using programmatic registration of routes via `handlers[]` config.
+
+
 ## Middleware
 
 Nitro route middleware can hook into the request lifecycle.
