--- a/docs/1.guide/2.routing.md
+++ b/docs/1.guide/2.routing.md
@@ -194,31 +194,25 @@ Returning anything from a middleware will close the request and should be avoide
 
 ### Route Meta
 
-A function that takes in a ServerRouteMeta object and adds it to route meta during build time.
+> [!NOTE]
+> This feature is currently available in [nightly channel](https://nitro.unjs.io/guide/nightly) only.
 
-At the moment it is only used to better define the experimental OpenAPI documentation for server routes, but can also be used to add useful params to your routes.
+You can define route handler meta at build-time using `defineRouteMeta` micro in the event handler files.
 
 ```ts [/api/test.get.ts]
 defineRouteMeta({
   openAPI: {
-      tags: ["Nitro Server Routes"],
-      summary: "Routes for Nitro",
-      description: "Some longer description for the specific route",
-      responses: [
-        200: {
-          description: "OK",
-        },
-        404: {
-          description: "Not found",
-        },
-      ],
+      tags: ["test"],
+      description: "Test route description"
   },
 });
+
+export default defineEventHandler(event => {
+  return 'OK'
+})
 ```
 
-You do not need to import `defineRouteMeta` as it is automatically imported thanks to (auto-import feature)[url(/auto-imports)].
-
-::alert{type=info}
+::tip
 You do not need to specify the method and the route in the openAPI specification since that will be extracted automatically from the route.
 ::
 
