--- a/docs/1.guide/2.routing.md
+++ b/docs/1.guide/2.routing.md
@@ -194,10 +194,10 @@ Returning anything from a middleware will close the request and should be avoide
 
 ### Route Meta
 
+You can define route handler meta at build-time using `defineRouteMeta` micro in the event handler files.
+
 > [!NOTE]
 > This feature is currently available in [nightly channel](https://nitro.unjs.io/guide/nightly) only.
-
-You can define route handler meta at build-time using `defineRouteMeta` micro in the event handler files.
 
 ```ts [/api/test.get.ts]
 defineRouteMeta({
@@ -208,12 +208,12 @@ defineRouteMeta({
 });
 
 export default defineEventHandler(event => {
-  return 'OK'
+  return "OK";
 })
 ```
 
-::tip
-You do not need to specify the method and the route in the openAPI specification since that will be extracted automatically from the route.
+::read-more{to="https://swagger.io/specification/v3/"}
+This feature is currntly usable to specify OpenAPI meta. See swagger specification for available OpenAPI options.
 ::
 
 ### Execution order
