--- a/docs/1.guide/2.routing.md
+++ b/docs/1.guide/2.routing.md
@@ -199,17 +199,16 @@ You can define route handler meta at build-time using `defineRouteMeta` micro in
 > [!NOTE]
 > This feature is currently available in [nightly channel](https://nitro.unjs.io/guide/nightly) only.
 
-```ts [/api/test.get.ts]
+```ts [/api/test.ts]
 defineRouteMeta({
   openAPI: {
-      tags: ["test"],
-      description: "Test route description"
+    tags: ["test"],
+    description: "Test route description",
+    parameters: [{ in: "query", name: "test", required: true }],
   },
 });
 
-export default defineEventHandler(event => {
-  return "OK";
-})
+export default defineEventHandler(() => "OK");
 ```
 
 ::read-more{to="https://swagger.io/specification/v3/"}
