--- a/docs/1.guide/1.utils.md
+++ b/docs/1.guide/1.utils.md
@@ -49,6 +49,7 @@ Nitro also exposes several built-in utils:
 - `defineCachedFunction(fn, options)`{lang=ts} / `cachedFunction(fn, options)`{lang=ts}
 - `defineCachedEventHandler(handler, options)`{lang=ts} / `cachedEventHandler(handler, options)`{lang=ts}
 - `defineRenderHandler(handler)`{lang=ts}
+- `defineRouteMeta(options)`{lang=ts} (experimental)
 - `useRuntimeConfig(event?)`{lang=ts}
 - `useAppConfig(event?)`{lang=ts}
 - `useStorage(base?)`{lang=ts}
