feat: experimental `defineRouteMeta` (#2102)
Co-authored-by: Pooya Parsa <pooya@pi0.io>
Co-authored-by: Pooya Parsa <pyapar@gmail.com>

--- a/docs/1.guide/2.routing.md
+++ b/docs/1.guide/2.routing.md
@@ -192,6 +192,29 @@ Middleware in `middleware/` directory are automatically registered for all route
 Returning anything from a middleware will close the request and should be avoided! Any returned value from middleware will be the response and further code will not be executed however **this is not recommended to do!**
 ::
 
+### Route Meta
+
+You can define route handler meta at build-time using `defineRouteMeta` micro in the event handler files.
+
+> [!NOTE]
+> This feature is currently available in [nightly channel](https://nitro.unjs.io/guide/nightly) only.
+
+```ts [/api/test.ts]
+defineRouteMeta({
+  openAPI: {
+    tags: ["test"],
+    description: "Test route description",
+    parameters: [{ in: "query", name: "test", required: true }],
+  },
+});
+
+export default defineEventHandler(() => "OK");
+```
+
+::read-more{to="https://swagger.io/specification/v3/"}
+This feature is currntly usable to specify OpenAPI meta. See swagger specification for available OpenAPI options.
+::
+
 ### Execution order
 
 Middleware are executed in directory listing order.
