docs: add a usage example for server sent events

--- a/docs/1.guide/3.websocket.md
+++ b/docs/1.guide/3.websocket.md
@@ -101,4 +101,35 @@ Now you can try it on `/websocket` route!
 
 As an alternative to WebSockets, you can use [Server-sent events](https://developer.mozilla.org/en-US/docs/Web/API/Server-sent_events)
 
+### Example
+
+Create an SSE handler in `routes/sse.ts` (or `server/routes/api/sse.ts` for Nuxt).
+
+```ts [sse.ts]
+export default defineEventHandler(async (event) => {
+  const eventStream = createEventStream(event)
+  
+  const interval = setInterval(async () => {
+    await eventStream.push(`Message @ ${new Date().toLocaleTimeString()}`)
+  }, 1000)
+  
+  eventStream.onClosed(async () => {
+    clearInterval(interval)
+    await eventStream.close()
+  })
+  
+  return eventStream.send()
+})
+```
+
+Then connect to this SSE endpoint from the client
+
+```ts
+const eventSource = new EventSource('http://localhost:3000/sse')
+    
+eventSource.onmessage = (event) => {
+  console.log(event.data)
+}
+```
+
 :read-more{to="https://h3.unjs.io/guide/websocket#server-sent-events-sse" title="SSE guide in H3"}
