docs(caching): Rephrase first sentence

--- a/docs/1.guide/6.cache.md
+++ b/docs/1.guide/6.cache.md
@@ -8,7 +8,7 @@ icon: ri:speed-line
 
 ## Cached event handlers
 
-To cache an event handler, you've just got to use the `defineCachedEventHandler` method.
+To cache an event handler, you simply need to use the `defineCachedEventHandler` method.
 
 It works like [`defineEventHandler`](https://h3.unjs.io/guide/event-handler) but with an additional second  [options](#options) parameter.
 
