--- a/docs/1.guide/0.index.md
+++ b/docs/1.guide/0.index.md
@@ -18,7 +18,7 @@ Nitro automatically makes your code compatible with any [deployment](/deploy) pr
 ## Quick start
 
 > [!TIP]
-> Instead of setting up a local development envirionment, you can use the [online playground](https://stackblitz.com/github/unjs/nitro/tree/main/examples/hello-world).
+> Instead of setting up a local development environment, you can use the [online playground](https://stackblitz.com/github/unjs/nitro/tree/main/examples/hello-world).
 
 ::note
 Make sure you have installed the recommended setup:
