--- a/docs/1.guide/2.routing.md
+++ b/docs/1.guide/2.routing.md
@@ -14,7 +14,7 @@ An [event handler](https://h3.unjs.io/guide/event) is a function that will be bi
 
 ## Filesystem routing
 
-Nitro supports file-based routing for your API routes (file are atomatically mapped to [h3 routes](https://h3.unjs.io/guide/router). Defining a route is as simple as creating a file inside the `api/` or `routes/` directory.
+Nitro supports file-based routing for your API routes (file are automatically mapped to [h3 routes](https://h3.unjs.io/guide/router). Defining a route is as simple as creating a file inside the `api/` or `routes/` directory.
 
 You can only define one handler per files and you can [append the HTTP method](#specific-request-method) to the filename to define a specific request method.
 
@@ -212,7 +212,7 @@ export default defineEventHandler(() => "OK");
 ```
 
 ::read-more{to="https://swagger.io/specification/v3/"}
-This feature is currntly usable to specify OpenAPI meta. See swagger specification for available OpenAPI options.
+This feature is currently usable to specify OpenAPI meta. See swagger specification for available OpenAPI options.
 ::
 
 ### Execution order
