--- a/docs/3.config/0.index.md
+++ b/docs/3.config/0.index.md
@@ -121,7 +121,7 @@ Serve `public/` assets in production.
 
 - Default: `false`{lang=ts}
 
-If enabled, disabled `.output/public` directory creation. Skipping to copy `public/` dir and also disables pre-renderering.
+If enabled, disabled `.output/public` directory creation. Skipping to copy `public/` dir and also disables pre-rendering.
 
 ### `publicAssets`
 
