docs(caching): fix typos and rephrase for clarity (#2380)

--- a/docs/1.guide/6.cache.md
+++ b/docs/1.guide/6.cache.md
@@ -8,7 +8,7 @@ icon: ri:speed-line
 
 ## Cached event handlers
 
-To cache an event handler, you've just to use the `defineCachedEventHandler` method.
+To cache an event handler, you simply need to use the `defineCachedEventHandler` method.
 
 It works like [`defineEventHandler`](https://h3.unjs.io/guide/event-handler) but with an additional second  [options](#options) parameter.
 
@@ -33,9 +33,9 @@ You can also use the `cachedEventHandler` method as alias of `defineCachedEventH
 
 ## Cached functions
 
-You can also cache a function using the `defineCachedFunction` function. This is useful to cache the result of a function that is not an event handler but a part of it and reuse it in multiple handlers.
+You can also cache a function using the `defineCachedFunction` function. This is useful for caching the result of a function that is not an event handler, but is part of one, and reusing it in multiple handlers.
 
-For example, you could want to cache for 1 hour the result of an API call:
+For example, you might want to cache the result of an API call for one hour:
 
 ::code-group
 ```ts [utils/github.ts]
@@ -71,9 +71,9 @@ You can also use the `cachedFunction` method as alias of `defineCachedFunction`.
 
 ### Edge workers
 
-In a edge workers, the instance is destroyed after each request. Nitro automatically uses `event.waitUntil` to keep the instance alive while the cache is being updated while the response is sent to the client.
+In edge workers, the instance is destroyed after each request. Nitro automatically uses `event.waitUntil` to keep the instance alive while the cache is being updated while the response is sent to the client.
 
-To make sure your cached functions are working as expected in a edge workers, you should always give the `event` as first argument to the function with `defineCachedFunction`.
+To ensure that your cached functions work as expected in edge workers, you should always pass the `event` as the first argument to the function using `defineCachedFunction`.
 
 ::code-group
 ```ts [utils/github.ts]
@@ -163,7 +163,7 @@ export default defineNuxtConfig({
 Nitro stores the data in the `cache:` mount point.
 
 - In production, it will use the [memory driver](https://unstorage.unjs.io/drivers/memory) by default.
-- In development, it will use the [filesystem driver](https://unstorage.unjs.io/drivers/fs) writing to a temporary dir.
+- In development, it will use the [filesystem driver](https://unstorage.unjs.io/drivers/fs), writing to a temporary dir.
 
 To overwrite the production storage, set the `cache` mount point using the `storage` option:
 
@@ -229,30 +229,30 @@ The `cachedEventHandler` and `cachedFunction` functions accept the following opt
     Default to `cache`.
   ::
   ::field{name="name" type="string"}
-    Guessed from function name if not provided and fallback to `'_'` otherwise.
+    Guessed from function name if not provided, and falls back to `'_'` otherwise.
   ::
   ::field{name="group" type="string"}
-    Default to `'nitro/handlers'` for handlers and `'nitro/functions'` for functions.
+    Defaults to `'nitro/handlers'` for handlers and `'nitro/functions'` for functions.
   ::
   ::field{name="getKey()" type="(...args) => string"}
-    A function that accepts the same arguments of the function and returns a cache key (`String`). :br
-    If not provided, a built-in hash function will be used that will generate a key based on the function arguments.
+    A function that accepts the same arguments as the original function and returns a cache key (`String`). :br
+    If not provided, a built-in hash function will be used to generate a key based on the function arguments.
   ::
   ::field{name="integrity" type="string"}
     A value that invalidates the cache when changed. :br
     By default, it is computed from **function code**, used in development to invalidate the cache when the function code changes.
   ::
   ::field{name="maxAge" type="number"}
-    Maximum age that cache is valid in seconds. :br
+    Maximum age that cache is valid, in seconds. :br
     Default to `1` (second).
   ::
   ::field{name="staleMaxAge" type="number"}
-    Maximum age that a stale cache is valid in seconds. If set to `-1` a stale value will still be sent to the client, while updating the cache in the background. :br
-    Default to `0` (disabled).
+    Maximum age that a stale cache is valid, in seconds. If set to `-1` a stale value will still be sent to the client while the cache updates in the background. :br
+    Defaults to `0` (disabled).
   ::
   ::field{name="swr" type="boolean"}
     Enable `stale-while-revalidate` behavior to serve a stale cached response while asynchronously revalidating it. :br
-    Default to `true`.
+    Defaults to `true`.
   ::
   ::field{name="shouldInvalidateCache()" type="(..args) => boolean"}
     A function that returns a `boolean` to invalidate the current cache and create a new one.
