--- a/docs/3.config/0.index.md
+++ b/docs/3.config/0.index.md
@@ -245,6 +245,12 @@ Default: `/`{lang=ts} (or `NITRO_APP_BASE_URL` environment variable if provided)
 
 Server's main base URL.
 
+### `apiBaseURL`
+
+- Default : `/api`
+
+Changes the default api base URL prefix.
+
 ### `handlers`
 
 Server handlers and routes.
@@ -391,12 +397,6 @@ Set `autoSubfolderIndex` lets you control how to generate the files in the `.out
 This option is useful when your hosting provider does not give you an option regarding the trailing slash.
 
 The prerenderer will attempt to render pages 3 times with a delay of 500ms. Use `retry` and `retryDelay` to change this behavior.
-
-### `apiPrefix`
-
-- Default : `/api`
-
-Changes the api URL prefix
 
 ## Directories
 
