--- a/docs/3.config/0.index.md
+++ b/docs/3.config/0.index.md
@@ -418,13 +418,13 @@ List of directories to scan and auto-register files, such as API routes.
 
 - Default : `api`
 
-Defines a different directory for api handlers
+Defines a different directory to scan for api route handlers.
 
 ### `routesDir`
 
 - Default : `routes`
 
-Defines a different directory for routes handlers
+Defines a different directory to scan for route handlers.
 
 ### `buildDir`
 
