feat: allow customizing `apiBaseURL`, `apiDir` and `routesDir` (#1763)
Co-authored-by: Pooya Parsa <pooya@pi0.io>

--- a/docs/3.config/0.index.md
+++ b/docs/3.config/0.index.md
@@ -245,6 +245,12 @@ Default: `/`{lang=ts} (or `NITRO_APP_BASE_URL` environment variable if provided)
 
 Server's main base URL.
 
+### `apiBaseURL`
+
+- Default : `/api`
+
+Changes the default api base URL prefix.
+
 ### `handlers`
 
 Server handlers and routes.
@@ -407,6 +413,18 @@ Project source directory. Same as `rootDir` unless specified. Helpful to move co
 - Default: (source directory when empty array)
 
 List of directories to scan and auto-register files, such as API routes.
+
+### `apiDir`
+
+- Default : `api`
+
+Defines a different directory to scan for api route handlers.
+
+### `routesDir`
+
+- Default : `routes`
+
+Defines a different directory to scan for route handlers.
 
 ### `buildDir`
 
