docs(websocket): correct nuxt sse url

--- a/docs/1.guide/3.websocket.md
+++ b/docs/1.guide/3.websocket.md
@@ -103,7 +103,7 @@ As an alternative to WebSockets, you can use [Server-sent events](https://develo
 
 ### Example
 
-Create an SSE handler in `routes/sse.ts` (or `server/routes/api/sse.ts` for Nuxt).
+Create an SSE handler in `routes/sse.ts` (or `server/routes/sse.ts` for Nuxt).
 
 ```ts [sse.ts]
 export default defineEventHandler(async (event) => {
