docs: add videos for context

--- a/docs/1.guide/3.websocket.md
+++ b/docs/1.guide/3.websocket.md
@@ -97,6 +97,9 @@ Now you can try it on `/websocket` route!
 > [!TIP]
 > Check out our [chat demo](https://nuxt-chat.pi0.io/) using Nitro Websocket API.
 
+> [!TIP]
+> Watch [a video of Alexander Lichter on integrating WebSockets](https://www.youtube.com/watch?v=OfY7JcrqkPg) with Nuxt and Nitro
+
 ## Server Sent Events (SSE)
 
 As an alternative to WebSockets, you can use [Server-sent events](https://developer.mozilla.org/en-US/docs/Web/API/Server-sent_events)
