--- a/docs/1.guide/4.storage.md
+++ b/docs/1.guide/4.storage.md
@@ -32,6 +32,9 @@ await useStorage('test').getItem<{ hello: string }>('foo')
 :read-more{to="https://unstorage.unjs.io"}
 
 
+> [!TIP]
+> Watch [a video of Alexander Lichter showcasing useStorage](https://www.youtube.com/watch?v=iE67C7ldjEk) with Nuxt and Nitro
+
 ## Configuration
 
 You can mount one or multiple custom storage drivers using the `storage` config.
