fix: preset `node` example

--- a/docs/2.deploy/10.runtimes/1.node.md
+++ b/docs/2.deploy/10.runtimes/1.node.md
@@ -63,7 +63,7 @@ When running `nitro build` with the Node preset, the result will be an entry poi
 
 ```js
 import { createServer } from 'node:http'
-import handler from './.output/server'
+import { handler } from './.output/server'
 
 const server = createServer(handler)
 server.listen(8080)
