Apply suggestions from code review

--- a/docs/2.deploy/10.runtimes/1.node.md
+++ b/docs/2.deploy/10.runtimes/1.node.md
@@ -63,8 +63,8 @@ When running `nitro build` with the Node preset, the result will be an entry poi
 
 ```js
 import { createServer } from 'node:http'
-import { handler } from './.output/server'
+import { listener } from './.output/server'
 
-const server = createServer(handler)
+const server = createServer(listener)
 server.listen(8080)
 ```
