doc: add prerender.stdout to config doc

--- a/docs/3.config/0.index.md
+++ b/docs/3.config/0.index.md
@@ -371,11 +371,12 @@ Default:
   ignore: [],
   routes: [],
   retries: 3,
-  retryDelay: 500
+  retryDelay: 500,
+  stdout: false
 }
 ```
 
-Prerendered options. Any route specified will be fetched during the build and copied to the `.output/public` directory as a static asset.
+Prerendered options. Any route specified will be fetched during the build and copied to the `.output/public` directory as a static asset. If `stdout` is set to `true` the prerendered HTML will be printed to the console instead of writing to the file system. To only output the HTML and not logs, set `logLevel` to `0`.
 
 Any route (string) that starts with a prefix listed in `ignore` or matches a regular expression or function will be ignored.
 
