--- a/docs/3.config/0.index.md
+++ b/docs/3.config/0.index.md
@@ -388,9 +388,9 @@ The `interval` and `concurrency` options lets you control the speed of pre-rende
 Set `autoSubfolderIndex` lets you control how to generate the files in the `.output/public` directory:
 
 ```bash
-# autoSubFolderIndex: true (default)
+# autoSubfolderIndex: true (default)
 /about -> .output/public/about/index.html
-# autoSubFolderIndex: false
+# autoSubfolderIndex: false
 /about -> .output/public/about.html
 ```
 
