--- a/docs/1.guide/8.assets.md
+++ b/docs/1.guide/8.assets.md
@@ -116,6 +116,7 @@ Then you can use the `assets:templates` base to retrieve your assets.
 
 ```ts [handlers/success.ts]
 export default defineEventHandler(async (event) => {
-  return await useStorage('assets:templates').getItem(`success.html`)
+  const html = await useStorage('assets:templates').getItem(`success.html`)
+  return html
 })
 ```
