--- a/docs/1.guide/9.plugins.md
+++ b/docs/1.guide/9.plugins.md
@@ -40,7 +40,7 @@ export default defineNuxtConfig({
 
 ## Nitro runtime hooks
 
-You can use Nitro [hooks](https://github.com/unjs/hookable) to extend the default runtime behaviour of Nitro by registering custom (async or asnc) functions to the lifecycle events within plugins.
+You can use Nitro [hooks](https://github.com/unjs/hookable) to extend the default runtime behaviour of Nitro by registering custom (async or sync) functions to the lifecycle events within plugins.
 
 **Example:**
 
