docs: tiny typo

--- a/docs/1.guide/98.typescript.md
+++ b/docs/1.guide/98.typescript.md
@@ -2,7 +2,7 @@
 icon: tabler:brand-typescript
 ---
 
-# Typescript
+# TypeScript
 
 > Nitro automatically generates the types for auto-imports and server routes :sparkles:
 
