--- a/docs/1.guide/99.nightly.md
+++ b/docs/1.guide/99.nightly.md
@@ -2,7 +2,7 @@
 icon: ri:moon-fill
 ---
 
-# Nightly channel
+# Nightly Channel
 
 > Nitro has a nightly release channel that automatically releases for every commit to `main` branch to try latest changes.
 
