--- a/docs/1.guide/4.storage.md
+++ b/docs/1.guide/4.storage.md
@@ -21,7 +21,8 @@ await useStorage().getItem('test:foo')
 await useStorage('test').setItem('foo', { hello: 'world' })
 
 // You can use data storage to write data to default .data/kv directory
-const dataStorage = await useStorage('data').setItem('test', 'works')
+const dataStorage = useStorage('data')
+await dataStorage.setItem('test', 'works')
 await useStorage().getItem('data:test') // Value persists
 
 // You can use generics to define types
