--- a/docs/1.guide/4.storage.md
+++ b/docs/1.guide/4.storage.md
@@ -23,7 +23,7 @@ await useStorage('test').setItem('foo', { hello: 'world' })
 // You can use data storage to write data to default .data/kv directory
 const dataStorage = useStorage('data')
 await dataStorage.setItem('test', 'works')
-await useStorage().getItem('data:test') // Value persists
+await dataStorage.getItem('data:test') // Value persists
 
 // You can use generics to define types
 await useStorage<{ hello: string }>('test').getItem('foo')
