--- a/docs/3.config/0.index.md
+++ b/docs/3.config/0.index.md
@@ -12,7 +12,7 @@ icon: ri:settings-3-line
 
 Use `preset` option `NITRO_PRESET` environment variable for custom **production** preset.
 
-Preset for development mode is always `nitro-dev` and default `node-server` for production building a standalone Node.js server.
+Preset for development mode is always `nitro_dev` and default `node_server` for production building a standalone Node.js server.
 
 The preset will automatically be detected when the `preset` option is not set and running in known environments.
 
