--- a/docs/1.guide/3.websocket.md
+++ b/docs/1.guide/3.websocket.md
@@ -82,10 +82,12 @@ Use a client to connect to server. Example: (`routes/websocket.ts` or `server/ro
 <!-- automd:file code src="../../examples/websocket/routes/index.ts" -->
 
 ```ts [index.ts]
-export default defineEventHandler(() => {
-  return $fetch(
+export default defineEventHandler(async () => {
+  const data = await $fetch(
     "https://raw.githubusercontent.com/unjs/crossws/main/examples/h3/public/index.html"
   );
+
+  return data; 
 });
 
 ```
