docs(routing): add nested example

--- a/docs/1.guide/2.routing.md
+++ b/docs/1.guide/2.routing.md
@@ -27,6 +27,20 @@ routes/
 nitro.config.ts
 ```
 
+You can nest routes by creating subdirectories.
+
+```md
+routes/
+  communities/
+    index.get.ts
+    index.post.ts
+    [id]/
+        index.get.ts
+        index.post.ts
+  hello.get.ts
+  hello.post.ts
+```
+
 ::note
 If you are using [Nuxt](https://nuxt.com), move the `server/api/` and `server/routes/` instead.
 ::
