docs(storage): fix typo

--- a/docs/1.guide/4.storage.md
+++ b/docs/1.guide/4.storage.md
@@ -13,7 +13,7 @@ Nitro has built-in integration with [unjs/unstorage](https://unstorage.unjs.io) 
 To use the storage layer, you can use the `useStorage()` and call `getItem(key)` to retrieve an item and `setItem(key, value)` to set an item.
 
 ```ts
-// Default storage is in memory
+// Default storage is in-memory
 await useStorage().setItem('test:foo', { hello: 'world' })
 await useStorage().getItem('test:foo')
 
