--- a/docs/1.guide/10.tasks.md
+++ b/docs/1.guide/10.tasks.md
@@ -113,6 +113,45 @@ export default eventHandler(async (event) => {
 });
 ```
 
+### Running in future
+
+You can also run tasks at a later time using the `runAt` and `runAfter` options.
+
+**Example:**
+
+::code-group
+```ts [runAt]
+// api/remind.ts
+export default eventHandler(async (event) => {
+    // IMPORTANT: Authenticate user and validate payload!
+    const payload = { ...getQuery(event) };
+
+    // Run the task at 3:00 PM
+    const { result } = await runTask("send:reminder", {
+        payload,
+        runAt: new Date().setHours(15, 0, 0, 0),
+    });
+
+    return { result };
+});
+```
+```ts [runAfter]
+// api/remind.ts
+export default eventHandler(async (event) => {
+    // IMPORTANT: Authenticate user and validate payload!
+    const payload = { ...getQuery(event) };
+
+    // Run the task after 24 hours has passed
+    const { result } = await runTask("send:reminder", {
+        payload,
+        runAfter: 1000 * 60 * 60 * 24, // 24 hours
+    });
+
+    return { result };
+});
+```
+::
+
 ## Run tasks with dev server
 
 Nitro's built-in dev server exposes tasks to be easily executed without programmatic usage.
