--- a/docs/3.config/0.index.md
+++ b/docs/3.config/0.index.md
@@ -28,7 +28,7 @@ Log verbosity level. See [unjs/consola#level](https://github.com/unjs/consola/#l
 
 Server runtime configuration.
 
-**Note:**: `nitro` namespace is reserved.
+**Note:** `nitro` namespace is reserved.
 
 ## Features
 
