--- a/docs/1.guide/3.websocket.md
+++ b/docs/1.guide/3.websocket.md
@@ -4,7 +4,7 @@ icon: cib:socket-io
 
 # WebSocket
 
-> Nitro natively support a cross platform WebSocket API
+> Nitro natively supports a cross platform WebSocket API
 
 Nitro natively supports runtime agnostic [WebSocket](https://developer.mozilla.org/en-US/docs/Web/API/WebSocket) API using [CrossWS](https://crossws.unjs.io/) and [H3 WebSocket](https://h3.unjs.io/guide/websocket).
 
