docs(server routes): fix typo

--- a/docs/1.guide/2.routing.md
+++ b/docs/1.guide/2.routing.md
@@ -4,7 +4,7 @@ icon: ri:direction-line
 
 # Server Routes
 
-> Nitro support filesystem routing to automatically map files to h3 routes.
+> Nitro supports filesystem routing to automatically map files to h3 routes.
 
 ## Event handlers
 
@@ -14,7 +14,7 @@ An [event handler](https://h3.unjs.io/guide/event-handler) is a function that wi
 
 ## Filesystem routing
 
-Nitro supports file-based routing for your API routes (file are automatically mapped to [h3 routes](https://h3.unjs.io/guide/router). Defining a route is as simple as creating a file inside the `api/` or `routes/` directory.
+Nitro supports file-based routing for your API routes (files are automatically mapped to [h3 routes](https://h3.unjs.io/guide/router)). Defining a route is as simple as creating a file inside the `api/` or `routes/` directory.
 
 You can only define one handler per files and you can [append the HTTP method](#specific-request-method) to the filename to define a specific request method.
 
@@ -46,7 +46,7 @@ If you are using [Nuxt](https://nuxt.com), move the `server/api/` and `server/ro
 ::
 
 ::tip
-Some providers like Vercel use a top-level `api/` directory as a feature, therefore routes placed in `/api` wont work.
+Some providers like Vercel use a top-level `api/` directory as a feature, therefore routes placed in `/api` won't work.
 You will have to use `routes/api/`.
 ::
 
