docs(config): fix url for log level

--- a/docs/3.config/0.index.md
+++ b/docs/3.config/0.index.md
@@ -20,7 +20,7 @@ The preset will automatically be detected when the `preset` option is not set an
 
 - Default: `3`{lang=ts} (`1`{lang=ts} when the testing environment is detected)
 
-Log verbosity level. See [unjs/consola#level](https://github.com/unjs/consola/#level) for more information.
+Log verbosity level. See [unjs/consola](https://github.com/unjs/consola?tab=readme-ov-file#log-level) for more information.
 
 ### `runtimeConfig`
 
