--- a/docs/3.config/0.index.md
+++ b/docs/3.config/0.index.md
@@ -115,7 +115,7 @@ Path to main render (file should export an event handler as default)
 
 Serve `public/` assets in production.
 
-**Note:** It is highly recommended that your edge CDN (nginx, apache, cloud) serves the `.output/public/` directory instead to enable compression and higher lever caching.
+**Note:** It is highly recommended that your edge CDN (Nginx, Apache, Cloud) serves the `.output/public/` directory instead of enabling compression and higher lever caching.
 
 ### `noPublicDir`
 
