--- a/docs/1.guide/2.routing.md
+++ b/docs/1.guide/2.routing.md
@@ -50,11 +50,6 @@ Some providers like Vercel use a top-level `api/` directory as a feature, theref
 You will have to use `routes/api/`.
 ::
 
-#### Differences between the two directories
-The `api/` directory is mainly for convenience, routes inside it will be prefixed with `/api/`.
-
-A notable difference between the two directories is how errors are handled by default: in `routes/` they are sent back with with a `Content-Type` of `text/html`, while in `api/` with `application/json`. This behaviour is overridden by some request properties (eg.: `Accept` or `User-Agent` headers).
-
 ### Simple routes
 
 First, create a file in `routes/` or `api/` directory. The filename will be the route path.
@@ -273,6 +268,14 @@ export default defineEventHandler((event) => {
   }
 })
 ```
+
+## Error handling
+
+You can use the [utilities available in H3](https://h3.unjs.io/guide/event-handler#error-handling) to handle errors in both routes and middlewares.
+
+The way errors are sent back to the client depends on the route's path. For most routes `Content-Type` is set to `text/html` by default and a simple html error page is delievered. If the route starts with `/api/` (either because it is placed in `api/` or `routes/api/`) the default will change to `application/json` and a JSON object will be sent.
+
+This behaviour can be overridden by some request properties (eg.: `Accept` or `User-Agent` headers).
 
 ## Route Rules
 
