docs: `/_nitro/scalar` general availability

--- a/docs/3.config/0.index.md
+++ b/docs/3.config/0.index.md
@@ -40,12 +40,9 @@ Enable experimental features.
 
 #### `openAPI`
 
-Enable `/_nitro/scalar` and `/_nitro/swagger` and `/_nitro/openapi.json` endpoints.
+Enable `/_nitro/scalar`, `/_nitro/swagger` and `/_nitro/openapi.json` endpoints.
 
 - Default: `false`
-
-> [!IMPORTANT]
-> [Scalar](https://scalar.com/) support is currently available in [nightly channel](/guide/nightly).
 
 You can pass an object on the root level to modify your OpenAPI specification:
 
