docs: notice for OpenAPI paths changing in future versions

--- a/docs/3.config/0.index.md
+++ b/docs/3.config/0.index.md
@@ -42,6 +42,9 @@ Enable experimental features.
 
 Enable `/_nitro/scalar`, `/_nitro/swagger` and `/_nitro/openapi.json` endpoints.
 
+> [!IMPORTANT]
+> These endpoints are moving to `/_scalar`, `/_swagger` and `/_openapi.json` in [nightly channel](/guide/nightly) and [nitro v3](https://github.com/unjs/nitro/pull/2521).
+
 - Default: `false`
 
 You can pass an object on the root level to modify your OpenAPI specification:
