chore(node.js): fix typo

--- a/docs/2.deploy/10.runtimes/1.node.md
+++ b/docs/2.deploy/10.runtimes/1.node.md
@@ -42,7 +42,7 @@ You can customize server behavior using following environment variables:
 
 **Preset:** `node_cluster`
 
-For more performance and leveraging multi core handling, you can use cluster preset.
+For more performance and leveraging multi-core handling, you can use cluster preset.
 
 ### Environment Variables
 
