docs (guide): server routes word ordering

--- a/docs/1.guide/2.routing.md
+++ b/docs/1.guide/2.routing.md
@@ -275,7 +275,7 @@ Nitro allows you to add logic at the top-level for each route of your configurat
 
 It is a map from route pattern (following [unjs/radix3](https://github.com/unjs/radix3#route-matcher)) to route options.
 
-When `cache` option is set, handlers matching pattern will be automatically wrapped with `defineCachedEventHandler`. See the [guide cache](/guide/cache) to learn more about this function.
+When `cache` option is set, handlers matching pattern will be automatically wrapped with `defineCachedEventHandler`. See the [cache guide](/guide/cache) to learn more about this function.
 
 ::note
 `swr: true|number` is shortcut for `cache: { swr: true, maxAge: number }`
