docs(routing): add error handling section (#2733)

--- a/docs/1.guide/2.routing.md
+++ b/docs/1.guide/2.routing.md
@@ -269,6 +269,14 @@ export default defineEventHandler((event) => {
 })
 ```
 
+## Error handling
+
+You can use the [utilities available in H3](https://h3.unjs.io/guide/event-handler#error-handling) to handle errors in both routes and middlewares.
+
+The way errors are sent back to the client depends on the route's path. For most routes `Content-Type` is set to `text/html` by default and a simple html error page is delievered. If the route starts with `/api/` (either because it is placed in `api/` or `routes/api/`) the default will change to `application/json` and a JSON object will be sent.
+
+This behaviour can be overridden by some request properties (eg.: `Accept` or `User-Agent` headers).
+
 ## Route Rules
 
 Nitro allows you to add logic at the top-level for each route of your configuration. It can be used for redirecting, proxying, caching and adding headers to routes.
