docs(compressPublicAssets): update compressible mime types

--- a/docs/3.config/0.index.md
+++ b/docs/3.config/0.index.md
@@ -163,6 +163,7 @@ List of compressible MIME types:
 - `application/json`
 - `application/opentype`
 - `application/otf`
+- `application/pdf`
 - `application/pkcs7-mime`
 - `application/protobuf`
 - `application/rss+xml`
@@ -171,6 +172,7 @@ List of compressible MIME types:
 - `application/vnd.apple.mpegurl`
 - `application/vnd.mapbox-vector-tile`
 - `application/vnd.ms-fontobject`
+- `application/wasm`
 - `application/xhtml+xml`
 - `application/xml`
 - `application/x-font-opentype`
