--- a/docs/2.deploy/0.index.md
+++ b/docs/2.deploy/0.index.md
@@ -26,6 +26,7 @@ When deploying to production using CI/CD, Nitro tries to automatically detect th
 - [stormkit](/deploy/providers/stormkit)
 - [vercel](/deploy/providers/vercel)
 - [zeabur](/deploy/providers/zeabur)
+- [coolify](/deploy/providers/coolify)
 
 ## Changing the deployment preset
 
