--- a/docs/1.guide/10.tasks.md
+++ b/docs/1.guide/10.tasks.md
@@ -215,7 +215,7 @@ nitro task run db:migrate --payload "{}"
 
 ### Concurrency
 
-Each task can have **one running instance**. Calling a task of same name multiple times in parallel, results to calling it once and all callers will get the same return value.
+Each task can have **one running instance**. Calling a task of same name multiple times in parallel, results in calling it once and all callers will get the same return value.
 
 > [!NOTE]
 > Nitro tasks can be running multiple times and in parallel.
