--- a/docs/1.guide/10.tasks.md
+++ b/docs/1.guide/10.tasks.md
@@ -37,13 +37,13 @@ export default defineNuxtConfig({
 
 ## Define tasks
 
-Tasks can be defined in `tasks/[name].ts` files.
+Tasks can be defined in `server/tasks/[name].ts` files.
 
-Nested directories are supported. The task name will be joined with `:`. (Example: `tasks/db/migrate.ts`task name will be `db:migrate`)
+Nested directories are supported. The task name will be joined with `:`. (Example: `server/tasks/db/migrate.ts`task name will be `db:migrate`)
 
 **Example:**
 
-```ts [tasks/db/migrate.ts]
+```ts [server/tasks/db/migrate.ts]
 export default defineTask({
   meta: {
     name: "db:migrate",
@@ -55,10 +55,6 @@ export default defineTask({
   },
 });
 ```
-
-> [!NOTE]
-> Use `server/tasks/db/migrate.ts` for Nuxt.
-
 
 ## Scheduled tasks
 
@@ -150,7 +146,7 @@ This endpoint returns a list of available task names and their meta.
 This endpoint executes a task. You can provide a payload using both query parameters and body JSON payload. The payload sent in the JSON body payload must be under the `"payload"` property.
 
 ::code-group
-```ts [tasks/echo/payload.ts]
+```ts [server/tasks/echo/payload.ts]
 export default defineTask({
   meta: {
     name: "echo:payload",
